# Bear

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt
modules/CommaSeparatedValue/: CMakeLists.txt
modules/CommaSeparatedValue/inc/: CommaSeparatedValue.h
modules/CommaSeparatedValue/src/: CommaSeparatedValue.cpp
modules/DataFrame/: CMakeLists.txt
modules/DataFrame/inc/: DataFrame.h
modules/DataFrame/src/: DataFrame.cpp
test/: CMakeLists.txt  comma_separated_value_test.cc  data_frame_test.cc
